--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-cv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://phamtrungdungdhsp.github.io/my-cv/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
