--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-cv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://phamtrungdungdhsp.github.io/my-cv/",
+  "homepage": "https://phamtrungdungdhsp.github.io/my-cv",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "global": "^4.4.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "5.x",
